[gd_scene load_steps=25 format=3 uid="uid://dmyac6yq7afjt"]

[ext_resource type="PackedScene" uid="uid://b61ts8dpix56w" path="res://scenes/components/health/health_component.tscn" id="1_1cpet"]
[ext_resource type="Texture2D" uid="uid://cwokvm1nmguej" path="res://assets/sprites/knight/Sword.png" id="1_vfq44"]
[ext_resource type="Script" path="res://scenes/game_objects/npcs/enemies/knight/knight.gd" id="1_vjjto"]
[ext_resource type="PackedScene" uid="uid://je7f8gn4i78q" path="res://scenes/components/damage/damagable.tscn" id="2_gtqqk"]
[ext_resource type="PackedScene" uid="uid://cpxbijp47j556" path="res://scenes/components/velocity/velocity_component.tscn" id="2_uw7xo"]
[ext_resource type="PackedScene" uid="uid://c16ukqcbxjfku" path="res://scenes/components/damage/damage_area.tscn" id="3_yd0n0"]
[ext_resource type="PackedScene" uid="uid://drhg3plicf04h" path="res://scenes/components/ai/ai_controller_component.tscn" id="4_np3jn"]
[ext_resource type="PackedScene" uid="uid://d1en4sxisf1gl" path="res://scenes/components/areas/floorable.tscn" id="8_ugfr7"]
[ext_resource type="AudioStream" uid="uid://bdfjcsjjwap8t" path="res://assets/audio/game/impactPlate_heavy_000.ogg" id="9_hkp12"]

[sub_resource type="Animation" id="Animation_gnwia"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.8, 1.8)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6to2r"]
radius = 12.0
height = 46.1278

[sub_resource type="Animation" id="Animation_g7fpk"]
resource_name = "attack_strike"
length = 1.08
step = 0.09
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.09, 0.18, 0.27, 0.36, 0.45, 0.54, 0.63, 0.72, 0.81, 0.9, 0.99),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [112, 114, 116, 118, 126, 128, 130, 132, 134, 136, 138, 140]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.272727),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.839277, 0.270634, 0.368338, 1), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.272727),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.8, 1.8), Vector2(1.8, 1.8)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DamageArea/CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.420827, 0.447396, 0.628193),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(13, -13), Vector2(-5, -13), Vector2(13, -13)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("DamageArea/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.420834, 0.45, 0.610829, 0.636364),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, false, false, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("DamageArea/CollisionShape2D:shape")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("CapsuleShape2D_6to2r")]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("DamageArea/CollisionShape2D:rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.45),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-3.49066]
}
tracks/7/type = "method"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath(".")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0.636364),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_play_sword_sound"
}]
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_knb5b"]
radius = 17.26
height = 50.0663

[sub_resource type="Animation" id="Animation_t8gu2"]
resource_name = "attack_swing"
length = 0.72
step = 0.09
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.09, 0.18, 0.27, 0.272727, 0.36, 0.454545, 0.545455, 0.636364),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [112, 114, 116, 112, 118, 114, 120, 122, 124]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0909091, 0.272727),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1.8, 1.8), Vector2(1.9, 1.9), Vector2(1.8, 1.8)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.272727),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.839277, 0.270634, 0.368338, 1), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DamageArea/CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.421855, 0.454545, 0.561797, 0.600609),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(2, -10), Vector2(2, -10), Vector2(2, -10), Vector2(2, -10)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("DamageArea/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.418791, 0.454545, 0.563839, 0.598566),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, false, false, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("DamageArea/CollisionShape2D:shape")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("CapsuleShape2D_knb5b")]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.545455),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_play_sword_sound"
}]
}

[sub_resource type="Animation" id="Animation_upv0g"]
resource_name = "death"
length = 1.3
step = 0.11
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.11, 0.22, 0.33, 0.44, 0.55, 0.66, 0.77, 0.88),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [196, 198, 200, 202, 204, 206, 208, 210, 212]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.888889, 1.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_4heh2"]
resource_name = "hit"
length = 0.22
step = 0.11
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.11),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [168, 170]
}

[sub_resource type="Animation" id="Animation_w3euo"]
resource_name = "idle"
length = 0.77
loop_mode = 1
step = 0.11
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.111111, 0.222222, 0.333333, 0.444444, 0.555556, 0.666667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 2, 4, 6, 8, 10, 12]
}

[sub_resource type="Animation" id="Animation_w36qb"]
resource_name = "running"
length = 0.72
loop_mode = 1
step = 0.09
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0909091, 0.181818, 0.272727, 0.363636, 0.454545, 0.545455, 0.636364),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [56, 58, 60, 62, 64, 66, 68, 70]
}

[sub_resource type="Animation" id="Animation_072x0"]
resource_name = "walk"
length = 0.44
loop_mode = 1
step = 0.11
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.11, 0.22, 0.33),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [28, 30, 32, 34]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cx8ax"]
_data = {
"RESET": SubResource("Animation_gnwia"),
"attack_strike": SubResource("Animation_g7fpk"),
"attack_swing": SubResource("Animation_t8gu2"),
"death": SubResource("Animation_upv0g"),
"hit": SubResource("Animation_4heh2"),
"idle": SubResource("Animation_w3euo"),
"running": SubResource("Animation_w36qb"),
"walk": SubResource("Animation_072x0")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_5dsc5"]
radius = 27.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vni35"]
radius = 24.0
height = 48.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_p20k2"]
radius = 6.0
height = 18.0

[sub_resource type="CircleShape2D" id="CircleShape2D_4rdt7"]
radius = 6.0

[node name="Knight" type="CharacterBody2D"]
y_sort_enabled = true
collision_layer = 4
collision_mask = 34
motion_mode = 1
wall_min_slide_angle = 0.586431
platform_floor_layers = 4294967217
platform_wall_layers = 2
script = ExtResource("1_vjjto")
attack_type_sequence = Array[int]([0, 0, 1])

[node name="VelocityComponent" parent="." instance=ExtResource("2_uw7xo")]
max_speed = 90.0
acceleration = 20000.0
deacceleration = 20000.0

[node name="HealthComponent" parent="." instance=ExtResource("1_1cpet")]

[node name="AttackTimerCd" type="Timer" parent="."]

[node name="Navigation" type="Node2D" parent="."]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="Navigation"]
path_desired_distance = 22.59
target_desired_distance = 15.0
path_max_distance = 150.0
simplify_path = true
simplify_epsilon = 0.68
avoidance_enabled = true
radius = 20.08
debug_enabled = true

[node name="AiControllerComponent" parent="Navigation" instance=ExtResource("4_np3jn")]
position = Vector2(0, -8)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cx8ax")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(1.8, 1.8)
texture = ExtResource("1_vfq44")
offset = Vector2(0, -18)
hframes = 28
vframes = 8

[node name="AttackRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
position = Vector2(1, -18)
shape = SubResource("CircleShape2D_5dsc5")
debug_color = Color(0.388235, 0.580392, 0.552941, 0.203922)

[node name="Damagable" parent="." instance=ExtResource("2_gtqqk")]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Damagable"]
position = Vector2(0, -17)
shape = SubResource("CapsuleShape2D_vni35")
debug_color = Color(0.34689, 0.613058, 0.273331, 0.42)

[node name="DamageArea" parent="." instance=ExtResource("3_yd0n0")]
collision_layer = 4
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
position = Vector2(13, -13)
rotation = -3.49066
shape = SubResource("CapsuleShape2D_6to2r")
disabled = true
debug_color = Color(0.871877, 0.268151, 0.569872, 0.42)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("CapsuleShape2D_p20k2")

[node name="Floorable" parent="." instance=ExtResource("8_ugfr7")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floorable"]
shape = SubResource("CircleShape2D_4rdt7")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_hkp12")
volume_db = -1.081
bus = &"SFX"

[connection signal="death" from="HealthComponent" to="." method="_on_health_component_death"]
[connection signal="timeout" from="AttackTimerCd" to="." method="_on_attack_timer_cd_timeout"]
[connection signal="navigation_finished" from="Navigation/NavigationAgent2D" to="." method="_on_navigation_agent_2d_navigation_finished"]
[connection signal="move_to" from="Navigation/AiControllerComponent" to="." method="_on_ai_controller_component_move_to"]
[connection signal="area_entered" from="AttackRange" to="." method="_on_attack_range_area_entered"]
[connection signal="area_exited" from="AttackRange" to="." method="_on_attack_range_area_exited"]
[connection signal="damage_detected" from="Damagable" to="." method="_on_damagable_damage_detected"]
